codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 288
expression: normalized_backend_snapshot(terminal.backend())
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│• Working (0s • esc to interrupt) · read -- tok/s · write 4000 tok/s · 1 back…│"
"│                                                                              │"
"│                                                                              │"
"│› Ask SolaiAgent to do anything                                               │"
"│                                                                              │"
"│  gpt-5.5 default · Smart ctx off · /tmp/project                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
